deployment-bitcoin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-deployment
  labels:
    app: bitcoin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bitcoin
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      containers:
      - name: bitcoin
        image: kewanrashed/bitcoin_price
        ports:
        - containerPort: 5000
          name: bitcoin
