service-redis.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-service

spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
