service-ynet.yaml
apiVersion: v1
kind: Service
metadata:
  name: ynet-service
spec:
  type: ClusterIP
  selector:
    app: ynet
  ports:
  - protocol: TCP 
    port: 5000
    targetPort: 5000
