ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1


spec:
  rules:
  - http:
      paths:
      - path: /ynet(/|$)(.*) 
        pathType: Prefix
        backend:
          service:
            name: ynet-service
            port:
              number: 5001
      - path: /bitcoin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bitcoin-service
            port:
              number: 5000
      - path: /(.*)                     
        pathType: Prefix
        backend:
          service:
            name: bitcoin-service
            port:
              number: 5000
